# filesets

./: .gitignore  .travis.yml  Cargo.toml  README.md  build-linux.sh
examples/1/: duplicated2  unique-1
examples/2/: unique-only-rolling
examples/3/: unique-3
src/: main.rs
