[package]
name = "filesets"
description = "Your swiss-army knife for dealing with identical files."
version = "0.1.0"
license = "MIT"
categories = ["command-line-utilities", "file-processing"]
authors = ["Bryce Covert <filesets@brycecovertoperations.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
rust-crypto = "^0.2"
threadpool = "1.7.1"
pbr = "1.0.1"
walkdir = "2.2.7"

[profile.release]
lto = true
panic = 'abort'


